--- a/VisualInspector/Views/MainView.xaml
+++ b/VisualInspector/Views/MainView.xaml
@@ -34,7 +34,9 @@
 		</Grid>
 
         <ListBox Grid.Row="1" ItemsSource="{Binding Rooms, Mode=TwoWay}"  
-                 Margin="10" ScrollViewer.HorizontalScrollBarVisibility="Visible" 
+                 Margin="10" ScrollViewer.HorizontalScrollBarVisibility="Auto" 
+                 ScrollViewer.VerticalScrollBarVisibility="Auto"
+                 
                  Background="#969945">
             <ListBox.ItemTemplate>
                 <DataTemplate>
