--- a/VisualInspector/Views/MainView.xaml
+++ b/VisualInspector/Views/MainView.xaml
@@ -5,7 +5,7 @@
         xmlns:local="clr-namespace:VisualInspector.Views"
         xmlns:infr="clr-namespace:VisualInspector.Infrastructure"
         xmlns:converters ="clr-namespace:VisualInspector.Infrastructure.Converters"
-        Title="MainView" WindowState="Maximized" WindowStartupLocation="CenterScreen"
+        Title="MainView" WindowState="Maximized" WindowStartupLocation="CenterScreen" Background="#ddccaa"
         UseLayoutRounding="True">
     <Window.Resources>
         <converters:AdaptingWidthListBoxItemConverter x:Key="adaptingWidthListBoxItemConverter"/>
@@ -24,9 +24,10 @@
 				<ColumnDefinition Width="auto" />
 			</Grid.ColumnDefinitions>
 			<StackPanel Grid.Column="0" Orientation="Horizontal" >
-				<ToggleButton Content="N" Margin="2" x:Name="normalFilterToogleButton" Style="{StaticResource filterToggleButton}" Background="{StaticResource forNormalBrush}" IsChecked="True" />
-				<ToggleButton Content="M" Margin="2" x:Name="middleFilterToogleButton" Style="{StaticResource filterToggleButton}" Background="{StaticResource forMiddleBrush}" IsChecked="True"/>
-				<ToggleButton Content="H" Margin="2" x:Name="highFilterToogleButton" Style="{StaticResource filterToggleButton}" Background="{StaticResource forHighBrush}" IsChecked="True"/>
+                <ToggleButton Content="Normal" Margin="2" x:Name="normalFilterToogleButton" Style="{StaticResource filterToggleButton}" 
+                              Background="{StaticResource forNormalBrush}" IsChecked="True" />
+                <ToggleButton Content="Middle" Margin="2" x:Name="middleFilterToogleButton" Style="{StaticResource filterToggleButton}" Background="{StaticResource forMiddleBrush}" IsChecked="True"/>
+				<ToggleButton Content="High" Margin="2" x:Name="highFilterToogleButton" Style="{StaticResource filterToggleButton}" Background="{StaticResource forHighBrush}" IsChecked="True"/>
 			</StackPanel>
 			<Label Content="Select data interval for displaying events:" HorizontalAlignment="Right" Grid.Column="1" />
 			<DatePicker Grid.Column="2" SelectedDate="{Binding SelectedDateBegin, Mode=TwoWay}" />
@@ -36,27 +37,24 @@
         <ListBox Grid.Row="1" ItemsSource="{Binding Rooms, Mode=TwoWay}"  
                  Margin="10" ScrollViewer.HorizontalScrollBarVisibility="Auto" 
                  ScrollViewer.VerticalScrollBarVisibility="Auto"
-                 
-                 Background="#969945">
+                 Background="#eeeecc">
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid>
+                    <Grid >
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="40"/>
                             <ColumnDefinition Width="*" />
                         </Grid.ColumnDefinitions>
-                        <Button Content="{Binding Number}" 
-                        Grid.Column="0" Margin="2, -1, 2, -1">
+                        <Button Content="{Binding Number}"   Margin="2 0 2 0"
+                        Grid.Column="0" VerticalAlignment="Center">
                             <Button.Style>
                                 <Style TargetType="Button">
                                     <Setter Property="Template">
                                         <Setter.Value>
                                             <ControlTemplate TargetType="Button">
-                                                <Border Margin="1"
+                                                <Border
                                                         BorderBrush="Black"
-                                                    BorderThickness="1" 
-                                                    CornerRadius="10,0,10,0"
-                                                    Background="LightGray">
+                                                        Background="#ccaa88">
                                                     <TextBlock
                                                         LineStackingStrategy="BlockLineHeight"
                                                         HorizontalAlignment="Center"
@@ -69,7 +67,7 @@
                                 </Style>
                             </Button.Style>
                         </Button>
-                        <infr:EventVisualHost 
+                        <infr:EventVisualHost  VerticalAlignment="Center" Margin="1 0 0 0"
                         Grid.Column="1"
                         HorizontalAlignment="Left"
                         ItemsSource="{Binding Events, Mode=TwoWay}" 
@@ -87,7 +85,7 @@
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                                <ContentPresenter/>
+                                <ContentPresenter Margin="0 1 0 1"/>
                             </ControlTemplate>
                         </Setter.Value>
                     </Setter>
@@ -106,6 +104,19 @@
                     </Style.Triggers>
                 </Style>
             </ListBox.ItemContainerStyle>
+            <ListBox.Template>
+                <ControlTemplate TargetType="{x:Type ListBox}">
+                    <Border
+                        Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}" 
+                            BorderThickness="{TemplateBinding BorderThickness}" 
+                            SnapsToDevicePixels="true">
+                        <ScrollViewer Focusable="false" Padding="{TemplateBinding Padding}" Style="{StaticResource NewScrollViewerStyle}">
+                            <ItemsPresenter SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"/>
+                        </ScrollViewer>
+                    </Border>
+                </ControlTemplate>
+            </ListBox.Template>
         </ListBox>
 
         <Grid Grid.Row="2" Height="150">
@@ -123,68 +134,82 @@
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <Border BorderBrush="LightGray" BorderThickness="1"  Margin="10 0 10 10">
-                <DockPanel Grid.Row="2">
-                    <TextBlock  Text="{Binding SelectedEvent}" DockPanel.Dock="Top" Margin="10 0 0 0"/>
-                    <Button Content="Show videofragment" 
-                    Command="{Binding ShowVideoCommand}"
-                    DockPanel.Dock="Bottom" Margin="10"/>
-                </DockPanel>
-            </Border>
-            <ListBox ItemsSource="{Binding SelectedFrameList, IsAsync=True}" Grid.Column="2"
-                     x:Name="listBoxFrames"
-                     Margin="0 0 10 10"  BorderThickness="1" BorderBrush="LightGray" 
+            <Grid Grid.Row="2" Margin="4 0 4 4">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="37"/>
+                </Grid.RowDefinitions>
+                <Border BorderBrush="#554422" BorderThickness="1">
+                    <TextBlock  Text="{Binding SelectedEvent}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Margin="4"/>
+                </Border>
+                <Button Grid.Row="1" Content="Show videofragment" FontSize="12" Foreground="White" Margin="0 4 0 0"
+                    Command="{Binding ShowVideoCommand}" VerticalAlignment="Bottom"
+                     Height="37">
+                    <Button.Style>
+                        <Style TargetType="Button">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="Button">
+                                        <Border Background="#bb9955" BorderBrush="#554422" BorderThickness="1" >
+                                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                        </Border>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </Button.Style>
+                </Button>
+            </Grid>
+            <Border BorderBrush="#554422" BorderThickness="1" Grid.Column="2" Margin="0 0 4 4" >
+                <ListBox ItemsSource="{Binding SelectedFrameList, IsAsync=True}" 
+                     x:Name="listBoxFrames" Background="#ddccaa"
                      HorizontalAlignment="Stretch" VerticalAlignment="Stretch" 
                      ScrollViewer.VerticalScrollBarVisibility="Disabled"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled">
 
-                <ListBox.ItemsPanel>
-                    <ItemsPanelTemplate>
-                        <StackPanel Orientation="Horizontal"/>
-                    </ItemsPanelTemplate>
-                </ListBox.ItemsPanel>
-                <ListBox.ItemTemplate>
-                    <DataTemplate>
-                        <Image Source="{Binding}" Margin="2 0 2 0">
-                            <!--<Image.LayoutTransform>
-                                <ScaleTransform ScaleX="0.25" ScaleY="0.25"/>
-                            </Image.LayoutTransform>-->
-                        </Image>
-                    </DataTemplate>
-                </ListBox.ItemTemplate>
-                <ListBox.ItemContainerStyle>
-                    <Style TargetType="ListBoxItem">
-                        <Setter Property="Template">
-                            <Setter.Value>
-                                <ControlTemplate TargetType="ListBoxItem" >
-                                    <ContentPresenter Width="{Binding ElementName=listBoxFrames, Converter={StaticResource adaptingWidthListBoxItemConverter}}"/>
-                                </ControlTemplate>
-                            </Setter.Value>
-                        </Setter>
-                    </Style>
-                </ListBox.ItemContainerStyle>
-                <ListBox.Style>
-                    <Style TargetType="ListBox">
-                        <Style.Triggers>
-                            <Trigger Property="ItemsSource" Value="{x:Null}">
-                                <Setter Property="Template" Value="{StaticResource WaitControlTemplate}" />
-                                <Trigger.ExitActions>
-                                    <BeginStoryboard>
-                                        <Storyboard>
-                                            <DoubleAnimation Storyboard.TargetProperty="Opacity"
+                    <ListBox.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Horizontal"/>
+                        </ItemsPanelTemplate>
+                    </ListBox.ItemsPanel>
+                    <ListBox.ItemTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding}" Margin="2 0 2 0"/>
+                        </DataTemplate>
+                    </ListBox.ItemTemplate>
+                    <ListBox.ItemContainerStyle>
+                        <Style TargetType="ListBoxItem">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ListBoxItem" >
+                                        <ContentPresenter Width="{Binding ElementName=listBoxFrames, Converter={StaticResource adaptingWidthListBoxItemConverter}}"/>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                    <ListBox.Style>
+                        <Style TargetType="ListBox">
+                            <Style.Triggers>
+                                <Trigger Property="ItemsSource" Value="{x:Null}">
+                                    <Setter Property="Template" Value="{StaticResource WaitControlTemplate}" />
+                                    <Trigger.ExitActions>
+                                        <BeginStoryboard>
+                                            <Storyboard>
+                                                <DoubleAnimation Storyboard.TargetProperty="Opacity"
                                                              From="0" To="1" Duration="0:0:0.5"/>
-                                        </Storyboard>
-                                    </BeginStoryboard>
-                                </Trigger.ExitActions>
-                            </Trigger>
-                            <DataTrigger Binding="{Binding SelectedEvent}" Value="{x:Null}">
-                                <Setter Property="Visibility" Value="Hidden"/>
-                            </DataTrigger>
-                        </Style.Triggers>
-                    </Style>
-                </ListBox.Style>
-            </ListBox>
-
+                                            </Storyboard>
+                                        </BeginStoryboard>
+                                    </Trigger.ExitActions>
+                                </Trigger>
+                                <DataTrigger Binding="{Binding SelectedEvent}" Value="{x:Null}">
+                                    <Setter Property="Visibility" Value="Hidden"/>
+                                </DataTrigger>
+                            </Style.Triggers>
+                        </Style>
+                    </ListBox.Style>
+                </ListBox>
+            </Border>
         </Grid>
     </Grid>
 </Window>
